@@ -15,6 +15,8 @@ mkdir libraries/U8glib/examples/Chess
 mkdir libraries/U8glib/examples/GraphicsTest
 mkdir libraries/U8glib/examples/Menu
 mkdir libraries/U8glib/examples/Scale
+mkdir libraries/U8glib/examples/Touch4WSetup
+mkdir libraries/U8glib/examples/Touch4WTest
 mkdir libraries/U8glib/utility
 cp ../../../ChangeLog ./libraries/U8glib/.
 cp ../../../license.txt ./libraries/U8glib/.
@@ -38,6 +40,8 @@ cp ../../../sys/arduino/Chess/*.pde ./libraries/U8glib/examples/Chess/.
 cp ../../../sys/arduino/GraphicsTest/*.pde ./libraries/U8glib/examples/GraphicsTest/.
 cp ../../../sys/arduino/Menu/*.pde ./libraries/U8glib/examples/Menu/.
 cp ../../../sys/arduino/Scale/*.pde ./libraries/U8glib/examples/Scale/.
+cp ../../../sys/arduino/Touch4WSetup/*.pde ./libraries/U8glib/examples/Touch4WSetup/.
+cp ../../../sys/arduino/Touch4WTest/*.pde ./libraries/U8glib/examples/Touch4WTest/.
 # sed -i 's|U8glib.h|utility/U8glib.h|g' ./libraries/U8glib/examples/HelloWorld/*.pde
 
 
