@@ -1,1 +1,1 @@
-echo -n "v1.11"
+echo -n "v1.12"
